<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="20dp">

    <TextView
        android:id="@+id/infoTXT"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/search_title"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TableRow>

            <TextView android:text="@string/lat" />

            <EditText
                android:id="@+id/latETXT"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="20"
                android:gravity="right"
                android:text="@string/lat_hint"
                android:inputType="number|numberDecimal" />
        </TableRow>
        <TableRow>

            <TextView android:text="@string/lng" />

            <EditText
                android:id="@+id/lngETXT"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="20"
                android:gravity="right"
                android:text="@string/lng_hint"
                android:inputType="number|numberDecimal" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/searchBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:onClick="clickFunc"/>

    <com.nhn.android.maps.NMapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>