<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="15dp">

    <TextView
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/overlay_title"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@android:color/holo_green_light"/>

    <TextView   android:id="@+id/infoTXT"
        android:layout_width="360dp"
        android:layout_height="70dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/none"
        android:textColor="@android:color/black"
        android:enabled="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/poiBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickFunc"
            android:text="@string/poi_title"
            style="?android:attr/buttonStyle" />

        <Button
            android:id="@+id/pathBTN"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickFunc"
            android:text="@string/path_title" />

        <Button
            android:id="@+id/piopathBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickFunc"
            android:text="@string/pio_path"
            style="?android:attr/buttonStyle" />

        <Button
            android:id="@+id/floatBTN"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickFunc"
            android:text="@string/pio_float" />

    </LinearLayout>

    <com.nhn.android.maps.NMapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>